--- a/CPSC-349-Group-Project-1-main/project1/html/styles/index.css
+++ b/CPSC-349-Group-Project-1-main/project1/html/styles/index.css
@@ -3,14 +3,16 @@ body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
   width: 100%;
-  min-height: 1800px;
+  /* min-height: 1000px;
+  background-image: linear-gradient(to right,blue, white); */
 }
 
 .navbar {
   position: absolute;
   width: 100%;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: rgb(26, 26, 26);
+  /* background-color: rgb(0, 0, 102); */
 }
 
 .navbar-brand {
@@ -53,7 +55,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 300px;
+  top: 150px;
 }
 
 p {
@@ -118,6 +120,8 @@ footer ul{
   display: flex;
   align-items: flex-end;
   background-color: rgb(26, 26, 26);
+  /* background-color: rgb(0, 0, 102); */
+
   padding: 10px;
 }
 
