--- a/CPSC-349-Group-Project-1-main/project1/html/styles/result.css
+++ b/CPSC-349-Group-Project-1-main/project1/html/styles/result.css
@@ -2,14 +2,14 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    min-height: 1800px;
+    /* min-height: 1800px; */
 }
   
 .navbar {
     position: absolute;
     width: 100%;
     background-color: rgb(26, 26, 26);
-    padding: 10px;
+    /* padding: 10px; */
 }
   
 .navbar-brand {
